app/src/styles/3-modules/_tech-stack.scss
// TECHNOLOGIES MODULE

.tech-stack-container {
    padding: 5vh 5vw 0;
    background-color: darken($offWhite, 1);
    height: auto;
    .tech-stack-title {
        text-align: center;
        font-family: "GT Sectra";
        font-size: 150%;
    }
    .tech-stack-logos {
        display: grid;
        grid-template-rows: repeat(2, 1fr);
        grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
        justify-items: center;
        padding: 5vw;
        height: auto;
        .tech-stack-logos-item {
            display: flex;
            flex-direction: column;
            justify-content: center;
            width: 5rem;
            img {
                height: 4rem;
                margin: 0.75rem auto;
            }
            p {
                margin-top: 0rem;
                font-family: "Louis George Cafe";
                text-align: center;
            }
        }
    }
}

@media (max-width: 790px) {
    .tech-stack-container {
        .tech-stack-title {
            margin-bottom: 3rem;
        }
        .tech-stack-logos {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: space-evenly;
            justify-items: center;
            .tech-stack-logos-item {
                margin-bottom: 3rem;
                padding: auto;
            }
        }
    }
}

@media (max-width: 1049px) and (min-width: 791px) {
    .tech-stack-container {
        height: 20vh;
    }
}

@media (min-width: 1050px) {
    .tech-stack-container {
        height: 45vh;
        .tech-stack-logos {
            display: grid;
            .tech-stack-logos-item {
                display: flex;
                flex-direction: column;
                justify-content: center;
                padding: 5vw;
                height: auto;
                img {
                    height: 6rem;
                }
            }
        }
    }
}

